                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-01-2006 changed: Rewrote window manager code to better track the window history.
 - 15-01-2006 changed: Cleaned up spin control (always wraps around now)
 - 15-01-2006 added: "Move Item" function to both Now Playing windows context menu.
		This can move an item (almost) anywhere in the list.  The exception is if the list is currently being
		played, then moved item cannot be moved past the currently playing item.  This is because all items in-between
		need to be altered, but the currently playing item cannot be altered.  If you try to move beyond the currently
		playing item, your moved item will be located at the slot adjacent to the currently playing item.
 - 14-01-2006 fixed: screensaver slideshow settings: if the selected path is to long it goes out of screen.
 - 14-01-2006 added: playlist playback is aborted and the current playlist cleared after 100 *CONSECUTIVE* failed items
 - 14-01-2006 fixed: current movie info from <info> tags for files that are part of a stacked movie
 - 13-01-2006 added: try/catch handling for threads started in dll's. allows a more gracefull exit for mplayer, should cache thread fail
 - 13-01-2006 fixed: All Genres and All Artists items in Music Library now go to next level of filtering and not directly to songs
 - 12-01-2006 updated: Portuguese (Brazil) language file (Thnx to T1000)
 - 12-01-2006 updated: Swedish language file (Thnx to blittan)
 - 12-01-2006 updated: Russian language file (thnx to que_)
 - 12-01-2006 updated: Polish language file (Thnx to napek)
 - 12-01-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 12-01-2006 updated: German language file